@@ -1,3 +1,9 @@
+2007-09-21  Jens Granseuer  <jensgr@gmx.net>
+
+	* theme-installer.c: (gnome_theme_install_real),
+	(transfer_done_cb), (gnome_theme_install_from_uri): unify "invalid theme"
+	error messages and be a bit more verbose
+
 2007-09-16  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-main.c: (main): add a comment for translators (bug #473379)
